[package]
name = "sbs"
version = "0.2.0"
edition = "2024"
license = "BSD-3"
description = "Small Build System written in rust"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
rhai = { version = "1.24.0", features = ["serde"] }

[package.metadata.generate-rpm]
assets = [
    {source="target/release/sbs", dest="/usr/local/bin/sbs"}
]
