[package]
name = "sbs"
version = "0.0.3-beta"
edition = "2024"
license = "BSD-3"
description = "Small Build System written in rust"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
fs_extra = "1.3.0"
glob = "0.3.3"
rhai = { version = "1.24.0", features = ["serde"] }

[package.metadata.generate-rpm]
post_install_script = "tar -xJf /opt/sbs/lang.tar.xz -C /opt/sbs/ && ln -sf /opt/sbs/bin/sbs /usr/bin/sbs"
assets = [
    { source = "lang.tar.xz", dest = "/opt/sbs/lang.tar.xz", mode = "644" },
    { source = "target/release/sbs", dest = "/opt/sbs/bin/sbs", mode = "755" },
]
